[package]
name = "artifactarium-archiver"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/hashblen/artifactarium-archiver"
publish = false
readme = "README.md"
homepage = "https://github.com/hashblen/artifactarium-archiver"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.17", features = ["derive"] }
color-eyre = "0.6.3"
pcap = "2.2.0"
protobuf = "~3.4.0" # match the protobuf version used in reliquary-codegen
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
ureq = { version = "2.10.1" }
artifactarium = { path = "Z:/smallProjects/artifactarium" }

[build-dependencies]
ureq = { version = "2.10.1", features = ["json"] }
artifactarium = { path = "Z:/smallProjects/artifactarium" }

[profile.release]
opt-level = "z"  # optimize for size
lto = true
overflow-checks = false     # Disable integer overflow checks.
